# acoustic-forcer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config_template.toml  run.cpp
.github/workflows/: checks.yml  cmake-ci.yml  cmake-docs.yml  cmake-multi-platform.yml  tests.yml
app/: CMakeLists.txt  config_input.cpp  config_input.hpp  main.cpp  params.hpp
apps/: CMakeLists.txt  jabber_out.cpp  jabber_participant.cpp  jabber_plot.cpp  jabber_profile.cpp  jabber_psd.cpp  jabber_viz.cpp  main.cpp  out.cpp  participant.cpp  plot.cpp  profile.cpp  profiler.cpp  psd.cpp  visualizer.cpp  viz.cpp
apps/src/: CMakeLists.txt  common.cpp  common.hpp  config_input.cpp  config_input.hpp  jabber_app.hpp  params.hpp
cmake/: jabber-config.cmake.in
cxx20/: CMakeLists.txt  format.hpp
docs/: CMakeLists.txt  Doxyfile.in  header.html  mainpage.dox
examples/square_single_wave/dummy/: dummy.py
examples/square_single_wave/jabber/: config.toml
examples/square_wave_spectrum/: precice-config.xml
examples/square_wave_spectrum/jabber/: config.toml
jabber/: CMakeLists.txt  jabber.hpp
jabber/app/: CMakeLists.txt  app.hpp  common.cpp  common.hpp  config_input.cpp  config_input.hpp  params.hpp
jabber/core/: CMakeLists.txt  acoustic_field.cpp  acoustic_field.hpp  interpolant.hpp  kernels.hpp  psd.cpp  transfer_functions.cpp  transfer_functions.hpp
src/: CMakeLists.txt  acoustic_field.cpp  acoustic_field.hpp  config.cpp  config.hpp  interpolant.hpp  jabber.hpp  kernels.cpp  kernels.hpp  psd.cpp  psd.hpp  transfer_functions.hpp  wave.hpp  waves.cpp  waves.hpp
src/app/: CMakeLists.txt  common.cpp  common.hpp  config_input.cpp  config_input.hpp  jabber_app.hpp  params.hpp
src/core/: CMakeLists.txt  acoustic_field.cpp  acoustic_field.hpp  core.hpp  interpolant.cpp  jabber.hpp  kernels.cpp  kernels.hpp  psd.hpp  transfer_functions.cpp  transfer_functions.hpp
tests/: CMakeLists.txt  README.md  app_utils.cpp  app_utils.hpp  test_1d.cpp  test_2d.cpp  test_acoustic_field.cpp  test_app_common.cpp  test_app_config_input.cpp  test_app_utils.hpp  test_compute_1d.cpp  test_compute_2d.cpp  test_compute_3d.cpp  test_interpolant.cpp  test_psd.cpp  test_single_wave_1d.cpp  test_transfer_functions.cpp  test_utils.cpp  test_utils.hpp  test_wave.cpp  unit-tests.cpp  utils.cpp  utils.hpp
tests/square_single_wave/: precice-config.xml
tests/square_single_wave/dummy/: dummy.py
tests/square_single_wave/jabber/: config.toml
tests/square_wave_spectrum/dummy/: dummy.py
